--- a/code/auswertung_method_comparison.ipynb
+++ b/code/auswertung_method_comparison.ipynb
@@ -46,8 +46,8 @@
     "    convert_css=True,\n",
     ")\n",
     "\n",
-    "qwen_model_identifier = \"Qwen_Qwen3-Embedding-0.6B_cuda_76ac2760\"\n",
-    "jinai_model_identifier = \"jinaai_jina-embeddings-v2-small-en_cuda_76ac2760\"\n",
+    "qwen_model_identifier = \"DEFAULT_Qwen_Qwen3-Embedding-0.6B_cuda_76ac2760\"\n",
+    "jinai_model_identifier = \"DEFAULT_jinaai_jina-embeddings-v2-small-en_cuda_76ac2760\"\n",
     "MODEL_PATTERN_TO_LABEL = frozendict(\n",
     "    {\n",
     "        qwen_model_identifier: \"Qwen 3\",\n",
